# naqsim

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
src/benchmarks/qasm/: SELECT_12_Heisenberg2D_cylinder_0.5_0.5.qasm  SELECT_2_Jellium3D_OBC_0_0.qasm  SELECT_4_Hydrogen2x2_OBC_0_0.qasm  SELECT_6_FermiHubbard2D_cylinder_0_0.qasm  adder_64q_basis_err1em3.qasm  ising_1d_64q_basis_err1em3.qasm  ising_2d_64q_basis_err1em3.qasm  qft_29q_basis_err1em3.qasm
src/tsc_naa_sim/: case_study_hwcfg.json  config.py  count_occupied_cells.py  latency_functions.py  logical_error_model.py  macro.py  misc.py  plane_initializer.py  precomputed_mapping_io.py  qreg_plane.py  run_analysis_scripts.py  script_analysis_final_evaluation_fixed_d.py  script_comp_opt_analysis_fixed_d.py  script_comp_opt_evaluation_fixed_d.py  script_d3rot_opt_analysis_fixed_d.py  script_d3rot_opt_evaluation_fixed_d.py  script_hs_skip_analysis_fixed_d.py  script_hs_skip_evaluation_fixed_d.py  script_ms_overhead_fixed_d.py  script_precompute_jit_mappings_fixed_d.py  script_sensitivity_test_analysis_fixed_d.py  script_sensitivity_test_evaluation_fixed_d.py  sensitivity_hwcfg_togl10_trf120.json  sensitivity_hwcfg_togl10_trf40.json  sensitivity_hwcfg_togl1_trf120.json  tsc_inst_scheduler.py  tsc_inst_translator.py  tsc_instructions.py  tsc_qubit_mapper_jit.py  tsc_uop_scheduler_comptime.py
src/tsc_naa_sim/artifact_evaluation/: .gitignore  README.md  batch_run_full_rendering.sh  batch_run_full_simulation.sh  params_full_simulation.txt  run_full_rendering.sh  run_full_simulation.sh  run_replotting.sh
(+106 files in other folders)
